--- a/src/content/docs/es/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -1,6 +1,6 @@
 ---
 title: Migrando desde NuxtJS
-description: Consejos para migrar un proyecto existente de NuXTJS a Astro
+description: Consejos para migrar un proyecto existente de NuxtJS a Astro
 type: migration
 stub: false
 framework: NuxtJS
@@ -12,7 +12,7 @@ import FileTree from '~/components/FileTree.astro'
 
 Aquí hay algunos conceptos clave y estragias de migración para ayudarte a comenzar. ¡Usa el resto de nuestra documentación y nuestra [comunidad de Discord](https://astro.build/chat) para continuar!
 
-> Esta guía se refiere a [Nuxt 2](https://nuxtjs.org/), no a la nueva versión Nuxt 3. Si bien algunos de los conceptos son similares, Nuxt 3 es una versión más nueva del framework y puede requerir estrategias diferentes para partes de su migración.
+> Esta guía se refiere a [Nuxt 2](https://nuxtjs.org/), no a la nueva versión Nuxt 3. Si bien algunos de los conceptos son similares, Nuxt 3 es una versión más nueva del framework y puede requerir estrategias diferentes para partes de tu migración.
 
 ## Principales similitudes entre Nuxt y Astro
 
@@ -39,7 +39,7 @@ Cuando reconstruyas tu sitio Nuxt en Astro, notarás algunas diferencias importa
 Cada migración de proyecto se verá diferente, pero hay algunas acciones comunes que realizarás al convertir de Nuxt a Astro.
 
 ### Crea un nuevo proyecto Astro
-Utiliza el comando `create astro` en tu gestor de paquetes para lanzar el asistente de linea de comandos de Astro o elige un tema de la comunidad del [catálogo de Astro Theme](https://astro.build/themes).
+Utiliza el comando `create astro` en tu gestor de paquetes para lanzar el asistente de linea de comandos de Astro o elige un tema de la comunidad del [catálogo de temas de Astro](https://astro.build/themes).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
@@ -70,7 +70,7 @@ Puedes pasar un argumento `--template` al comando `create astro` para iniciar un
     # lanzar el Asistente de línea de comandos de Astro
     npm create astro@latest
 
-    # crea un nuevo proyecto con un ejemplo oficial
+    # crear un nuevo proyecto con un ejemplo oficial
     npm create astro@latest -- --template <example-name>
     ```
     </Fragment>
@@ -79,7 +79,7 @@ Puedes pasar un argumento `--template` al comando `create astro` para iniciar un
     # lanzar el Asistente de línea de comandos de Astro
     pnpm create astro@latest
 
-    # crea un nuevo proyecto con un ejemplo oficial
+    # crear un nuevo proyecto con un ejemplo oficial
     pnpm create astro@latest --template <example-name>
     ```
     </Fragment>
@@ -88,7 +88,7 @@ Puedes pasar un argumento `--template` al comando `create astro` para iniciar un
     # lanzar el Asistente de línea de comandos de Astro
     yarn create astro@latest
 
-    # crea un nuevo proyecto con un ejemplo oficial
+    # crear un nuevo proyecto con un ejemplo oficial
     yarn create astro@latest --template <example-name>
     ```
     </Fragment>
@@ -120,13 +120,13 @@ Puede resultarte útil instalar algunas de las [integraciones opcionales de Astr
 
     Como Nuxt, la carpeta `src/pages/` de Astro es una carpeta especial utilizada para el enrutamiento basado en archivos. Todas las demás carpetas son opcionales, y puedes organizar el contenido de tu carpeta `src/` de la forma que desees. Otras carpetas comunes en los proyectos Astro incluyen `src/layouts/`, `src/components`, `src/styles`, `src/scripts`.
 
-### Conviertir páginas Vue SFC a archivos `.astro`
+### Convertir páginas Vue SFC a archivos `.astro`
 
 Aqui hay algunos consejos para convertir un componente `.vue` de Nuxt en un componente `.astro`:
 
 1. Usa la etiqueta `<template>` de la función de componente NuxtJS existente como base para tu plantilla HTML.
 
-2. Cambia cualquiere [sintaxis de Nuxt o Vue a Astro](#referencia-convertir-la-sintaxis-de-nuxtJS-a-astro) o a los estándares web de HTML. Esto incluye `<NextLink>`, `:class`, `{{variable}}`, y `v-if`, por ejemplo.
+2. Cambia cualquier [sintaxis de Nuxt o Vue a Astro](#referencia-convertir-la-sintaxis-de-nuxtJS-a-astro) o a los estándares web de HTML. Esto incluye `<NextLink>`, `:class`, `{{variable}}`, y `v-if`, por ejemplo.
 
 3. Mueve la etiqueta `<script>` de JavaScript, a un "valla de código" (`---`). Convierte las propiedades de recuperación de datos de tu componente a JavaScript del lado del servidor - ver [la obtención de datos de Nuxt en Astro](#obtención-de-datos-de-nuxt-a-astro).
 
@@ -134,7 +134,7 @@ Aqui hay algunos consejos para convertir un componente `.vue` de Nuxt en un comp
 
 5. Decide si algún componente importado también necesita ser convertido a Astro. Con la integración oficial instalada, puedes [usar componentes Vue existentes en tu archivo Astro](/es/guides/integrations-guide/vue/). Pero, es posible que desees convertirlos a Astro, ¡especialmente si no necesitan ser interactivos!
 
-Ve [un ejemplo de una aplicación Nuxt convertida paso a paso](#ejemplo-guiado-ver-los-pasos).
+Mira [un ejemplo de una aplicación Nuxt convertida paso a paso](#ejemplo-guiado-ver-los-pasos).
 
 #### Comparar: Vue vs Astro
 
@@ -277,7 +277,7 @@ Para convertir a Astro, cambia esta propiedad de ruta dinámica subrayada (por e
 
 #### Páginas de Markdown y MDX
 
-Astro tiene soporte incorporado para Markdown y una integración opcional para archivos MDX. Puedes reutilizar cualquier página Markdown y MDX existente, pero puede que requieran algunos ajustes en su frontmatter, como agregar [la propiedad especial `layout` del frontmatter de Astro](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
+Astro tiene soporte incorporado para Markdown y una integración opcional para archivos MDX. Puedes reutilizar cualquier página Markdown y MDX existente, pero puede que requieran algunos ajustes en tu frontmatter, como agregar [la propiedad especial `layout` del frontmatter de Astro](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
 
 Ya no necesitarás crear manualmente páginas para cada ruta generada por Markdown o usar un paquete externo como `@nuxt/content`. Estos archivos se pueden colocar dentro de `src/pages/` para aprovechar el enrutamiento automático basado en archivos.
 
@@ -285,7 +285,7 @@ Cuando forma parte de una [colección de contenido](/es/guides/content-collectio
 
 ### Migrando Tests
 
-Como Astro genera HTML sin procesar, es posible escribir tests de extremo a extremo utilizando la salida del paso de compilación. Cualquier prueba de extremo a extremo escrita anteriormente podría funcionar de inmediato, si has podido hacer coincidir el marcado de tu sitio Nuxt. Las bibliotecas de pruebas como Jest y Vue Testing Library se pueden importar y usar en Astro para probar tus componentes Vue.
+Como Astro genera HTML sin procesar, es posible escribir tests end-to-end utilizando la salida del paso de compilación. Cualquier test end-to-end escrito anteriormente podría funcionar de inmediato, si has podido hacer coincidir el marcado de tu sitio Nuxt. Las bibliotecas de pruebas como Jest y Vue Testing Library se pueden importar y usar en Astro para probar tus componentes Vue.
 
 Ver más en la [guía de pruebas de Astro](/es/guides/testing/).
 
@@ -345,7 +345,7 @@ Si es necesario, actualiza cualquier [importación de archivo](/es/guides/import
 
 ```astro title="src/components/Component.astro" del={1} ins={2}
 
-Note that `.astro` and several other file types must be imported with their full file extension.
+Ten en cuenta que `.astro` y varios otros tipos de archivo deben importarse con su extensión de archivo completa.
 
 ```astro title="src/pages/authors/Fred.astro" ".astro"
 ---
@@ -405,7 +405,6 @@ export const getStaticPaths = async () => {
 Nuxt tiene dos métodos para obtener datos del lado del servidor:
 
 - [opciones API de `asyncData`](https://nuxtjs.org/docs/features/data-fetching/#async-data)
-- [`fetch` hook](https://nuxtjs.org/docs/features/data-fetching/#the-fetch-hook)
 - [gancho `fetch`](https://nuxtjs.org/docs/features/data-fetching/#the-fetch-hook)
 
 En Astro, obtén datos dentro de la valla de código de tu página.
@@ -426,7 +425,7 @@ Migra lo siguiente:
 }
 ```
 
-To a code fence without a wrapper function:
+Para una valla de código sin una función de envoltura:
 
 ```astro title="src/pages/index.astro"
 ---
@@ -435,7 +434,7 @@ const resJson = await res.json();
 const pokemons = resJson.results;
 ---
 
-<!-- Your template here -->
+<!-- Tu plantilla va aqui -->
 ```
 
 ### Nuxt Styling to Astro
@@ -444,11 +443,11 @@ Nuxt utiliza el estilo de los componentes de Vue para generar el estilo de una p
 
 ```vue title="pages/index.vue"
 <template>
-	<!-- Your template here -->
+  <!-- Tu plantilla va aqui -->
 </template>
 
 <script>
-	// Your server logic here
+  // La lógica del servidor va aquí
 </script>
 
 <style scoped>
@@ -474,7 +473,6 @@ Nuxt utiliza el estilo de los componentes de Vue para generar el estilo de una p
 
 #### Estilo global
 
-`<style>`  tags are `scoped` by default in Astro. To make a `<style>` tag global, mark it with the `is:global` attribute:
 Las etiquetas `<style>` son `scoped` (delimitadas) de forma predeterminada en Astro. Para hacer que una etiqueta `<style>` sea global, márcala con el atributo `is:global`:
 
 ```astro title="src/pages/index.vue"
@@ -488,7 +486,7 @@ Las etiquetas `<style>` son `scoped` (delimitadas) de forma predeterminada en As
 
 
 #### Soporte de preprocesadores
-6
+
 [Astro admite los preprocedaores de CSS más populares](/es/guides/styling/#preprocesadores-css) instalandolos como una dependencia de desarrollo. Por ejemplo, para usar SCSS:
 
 
@@ -517,7 +515,7 @@ Ve más sobre [Estilos en Astro](/es/guides/styling/).
 
 Convierte cualquier [componente `<nuxt-img/>` o `<nuxt-picture/>` de Nuxt](https://image.nuxtjs.org/components/nuxt-img) a [la integración de imagen de Astro](/es/guides/images/#integración-image-de-astro) o a una etiqueta HTML `<img>` estándar.
 
-Ve una [lista completa de atributos de componentes](/es/guides/integrations-guide/image/#uso) disponibles para los componentes `<Image />` y `<Picture />` de Astro, y ten en cuenta que varios serán diferentes a los atributos de Nuxt.
+Mira una [lista completa de atributos de componentes](/es/guides/integrations-guide/image/#uso) disponibles para los componentes `<Image />` y `<Picture />` de Astro, y ten en cuenta que varios serán diferentes a los atributos de Nuxt.
 
 ```astro title="src/pages/index.astro"
 ---
@@ -533,7 +531,7 @@ En los componentes Vue (`.vue`) dentro de tu aplicación Astro, usa la sintaxis 
 
 Puedes aprender más sobre [el uso de imágenes en Astro](/es/guides/images/) en la guía de imágenes.
 
-## Ejemplo guiado: ¡Ve los pasos!
+## Ejemplo guiado: ¡Mira los pasos!
 
 Aquí hay un ejemplo de la obtención de datos de un Pokédex hecho con Nuxt migrado a Astro.
 
@@ -618,7 +616,7 @@ Ten en cuenta que:
 
 - la etiqueta `<NuxtLink>` se convierte en `<a>`.
 
-- The `<> </>` fragment is not required in Astro templating.
+- El fragmento `<> </>` no es requerido en la plantilla de Astro.
 
 ```astro title="src/pages/index.astro" ".map" "</a>" "<a" "key={" "}>" "href={" " {pokemon.id}" "} alt={" "src={" "}/>" ">{pokemon.name}<"
 ---
