--- a/src/content/docs/es/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -30,7 +30,7 @@ Cuando reconstruyas tu sitio Nuxt en Astro, notarás algunas diferencias importa
 
 - [MPA vs SPA](/es/concepts/mpa-vs-spa/): Nuxt es una SPA basada en Vue (aplicación de una sola página). Los sitios de Astro son aplicaciones multipágina construidas usando componentes `.astro`, pero también pueden admitir React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit y plantillas HTML sin procesar.
 
-- [Enrutamiento de Página](/es/core-concepts/astro-pages/#file-based-routing): Nuxt usa `vue-router` para el enrutamiento SPA, y `vue-meta` para administrar `<head>`. En Astro, crearás rutas de página HTML separadas y controlarás tu `<head>` directamente o en un componente plantilla.
+- [Enrutamiento de Página](/es/core-concepts/astro-pages/#enrutamiento-basado-en-archivos): Nuxt usa `vue-router` para el enrutamiento SPA, y `vue-meta` para administrar `<head>`. En Astro, crearás rutas de página HTML separadas y controlarás tu `<head>` directamente o en un componente plantilla.
 
 - [Enfocado a contenido](/es/concepts/why-astro/): Astro fue diseñado para sobresalir en hacer sitios enfocados en el contenido. Mientras Nuxt puede hacer sitios enfocados en el contenido a través de `@nuxt/content`, una aplicación Nuxt existente puede estar construida para una alta interactividad del lado del cliente. Astro tiene capacidades integradas para trabajar con tu contenido, como la generación de páginas, pero puede ser difícil replicar elementos con un estado compartido complejo, como los paneles, usando componentes `.astro`.
 
