Fix more broken links

--- a/src/content/docs/es/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -22,7 +22,7 @@ Nuxt y Astro comparten algunas similitudes que te ayudarán a migrar tu proyecto
 - Astro usa un enrutamiento basado en archivos y [permite que las páginas con nombres creen rutas dinámicas](/es/core-concepts/routing/#rutas-dinámicas)
 - Astro es [basado en componentes](/es/core-concepts/astro-components/) y la estructura de tu marcado será similar antes y después de tu migración.
 - Astro tiene [una integración oficial para usar componentes de Vue](/es/guides/integrations-guide/vue/).
-- Astro tiene soporte para [instalar paquetes de NPM](/es/guides/imports/#npm-packages), incluyendo librerías de Vue. Puedes mantener algunos o todos tus componentes y dependencias de Vue existentes.
+- Astro tiene soporte para [instalar paquetes de NPM](/es/guides/imports/#paquetes-npm), incluyendo librerías de Vue. Puedes mantener algunos o todos tus componentes y dependencias de Vue existentes.
 
 ## Principales diferencias entre Nuxt y Astro
 
@@ -126,7 +126,7 @@ Aqui hay algunos consejos para convertir un componente `.vue` de Nuxt en un comp
 
 1. Usa la etiqueta `<template>` de la función de componente NuxtJS existente como base para tu plantilla HTML.
 
-2. Cambia cualquier [sintaxis de Nuxt o Vue a Astro](#referencia-convertir-la-sintaxis-de-nuxtJS-a-astro) o a los estándares web de HTML. Esto incluye `<NextLink>`, `:class`, `{{variable}}`, y `v-if`, por ejemplo.
+2. Cambia cualquier [sintaxis de Nuxt o Vue a Astro](#referencia-convertir-la-sintaxis-de-nuxtjs-a-astro) o a los estándares web de HTML. Esto incluye `<NextLink>`, `:class`, `{{variable}}`, y `v-if`, por ejemplo.
 
 3. Mueve la etiqueta `<script>` de JavaScript, a un "valla de código" (`---`). Convierte las propiedades de recuperación de datos de tu componente a JavaScript del lado del servidor - ver [la obtención de datos de Nuxt en Astro](#obtención-de-datos-de-nuxt-a-astro).
 
@@ -134,7 +134,7 @@ Aqui hay algunos consejos para convertir un componente `.vue` de Nuxt en un comp
 
 5. Decide si algún componente importado también necesita ser convertido a Astro. Con la integración oficial instalada, puedes [usar componentes Vue existentes en tu archivo Astro](/es/guides/integrations-guide/vue/). Pero, es posible que desees convertirlos a Astro, ¡especialmente si no necesitan ser interactivos!
 
-Mira [un ejemplo de una aplicación Nuxt convertida paso a paso](#ejemplo-guiado-ver-los-pasos).
+Mira [un ejemplo de una aplicación Nuxt convertida paso a paso](#ejemplo-guiado-mira-los-pasos).
 
 #### Comparar: Vue vs Astro
 
@@ -247,7 +247,7 @@ En NuxtJS, tus [páginas](/es/core-concepts/astro-pages/) viven en `/pages`. En 
 
 #### Páginas de Vue
 
-Tus páginas Vue existentes (`.vue`) de Nuxt deberán [convertirse de archivos Vue a páginas `.astro`](#conviertir-páginas-vue-sfc-a-archivos-astro). No puedes usar un archivo de página Vue existente en Astro.
+Tus páginas Vue existentes (`.vue`) de Nuxt deberán [convertirse de archivos Vue a páginas `.astro`](#convertir-páginas-vue-sfc-a-archivos-astro). No puedes usar un archivo de página Vue existente en Astro.
 
 Estas [páginas `.astro`](/es/core-concepts/astro-pages/) deben estar ubicadas dentro de `src/pages/` y tendrán rutas de página generadas automáticamente en función de su ruta de archivo.
 
@@ -363,7 +363,7 @@ En Nuxt, para generar una página dinámica, debes:
 
 En astro, similarmente tienes dos opciones: 
 - [Usar renderizado del lado del servidor (SSR)](/es/guides/server-side-rendering/).
-- Exporta una función `getStaticPaths()` en el frontmatter de una página de Astro para indicarle al framework qué [rutas estáticas generar dinámicamente](/es/core-concepts/routing/#dynamic-routes).
+- Exporta una función `getStaticPaths()` en el frontmatter de una página de Astro para indicarle al framework qué [rutas estáticas generar dinámicamente](/es/core-concepts/routing/#rutas-dinámicas).
 
 #### Convertir una función `generate` en Nuxt a una función `getStaticPaths` en Astro.
 
@@ -515,7 +515,7 @@ Ve más sobre [Estilos en Astro](/es/guides/styling/).
 
 Convierte cualquier [componente `<nuxt-img/>` o `<nuxt-picture/>` de Nuxt](https://image.nuxtjs.org/components/nuxt-img) a [la integración de imagen de Astro](/es/guides/images/#integración-image-de-astro) o a una etiqueta HTML `<img>` estándar.
 
-Mira una [lista completa de atributos de componentes](/es/guides/integrations-guide/image/#uso) disponibles para los componentes `<Image />` y `<Picture />` de Astro, y ten en cuenta que varios serán diferentes a los atributos de Nuxt.
+Mira una [lista completa de atributos de componentes](/es/guides/integrations-guide/image/#usage) disponibles para los componentes `<Image />` y `<Picture />` de Astro, y ten en cuenta que varios serán diferentes a los atributos de Nuxt.
 
 ```astro title="src/pages/index.astro"
 ---
