--- a/src/content/docs/es/reference/errors/middleware-no-data-or-next-called.mdx
+++ b/src/content/docs/es/reference/errors/middleware-no-data-or-next-called.mdx
@@ -13,7 +13,7 @@ Por ejemplo:
 ```ts
 import {defineMiddleware} from "astro/middleware";
 export const onRequest = defineMiddleware((context, _) => {
-	// doesn't return anything or call `next`
+	// no regresa nada o llama `next
 	context.locals.someData = false;
 });
 ```
