--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -169,7 +169,7 @@ Finally, your project should now include these new files:
 
 ### Prerequisites
 
-- An Astro project initialized with Firebase as described in the [Initializing Firebase in Astro](/en/guides/firebase/#initializing-firebase-in-astro) section.
+- An Astro project initialized with Firebase as described in the [Initializing Firebase in Astro](#initializing-firebase-in-astro) section.
 - A Firebase project with email/password authentication enabled in the Firebase console under Authentication > Sign-in method.
 
 ### Creating auth server endpoints
@@ -555,7 +555,7 @@ The endpoint will verify the ID token and create a new session cookie for the us
 
 ### Prerequisites
 
-- An Astro project initialized with Firebase as described in the [Initializing Firebase in Astro](/en/guides/firebase/#initializing-firebase-in-astro) section.
+- An Astro project initialized with Firebase as described in the [Initializing Firebase in Astro](#initializing-firebase-in-astro) section.
 
 - A Firebase project with a Firestore database. You can follow the [Firebase documentation](https://firebase.google.com/docs/firestore/quickstart) to create a new project and set up a Firestore database. 
 
