--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -213,6 +213,24 @@ if (!isLoggedIn(cookie)) {
 </html>
 ```
 
+### `Astro.locals`
+
+The `Astro.locals` object is a user-defined object that can be used to access data from your Astro middleware or your server inside your page. This can be useful for passing per-request data like user sessions.
+
+```astro title="src/pages/account.astro" {8}
+---
+const { user } = Astro.locals;
+
+// If the user is not logged in, redirect them to the login page
+if (user) {
+  return Astro.redirect('/login');
+}
+---
+<html>
+  <p>Logged in as {user.name}</p>
+</html>
+```
+
 ### `Response`
 
 You can also return a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) from any page. You might do this to return a 404 on a dynamic page after looking up an id in the database.
