--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -3,7 +3,7 @@ title: Firebase & Astro
 description: Add a backend to your project with Firebase
 type: backend
 service: Firebase
-stub: true
+stub: false
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import FileTree from '~/components/FileTree.astro'
@@ -321,7 +321,7 @@ After creating server endpoints for authentication, your project directory shoul
 
 ### Creating pages
 
-Now that we have authentication endpoints set up, we can create the pages that will use them. We will create three new pages:
+Create the pages that will use the Firesbase endpoints:
 
 - `src/pages/register` - will contain a form to register a user
 - `src/pages/signin` - will contain a form to sign in a user
