another heading for visual separation

--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -787,6 +787,8 @@ const friend = friendSnapshot.data() as Friend
 </script>
 ```
 
+#### Display an individual record
+
 `src/pages/friend/[id].astro` will display the details of a friend.
 
 ```astro title="src/pages/friend/[id].astro"
