more descriptive heading

--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -826,7 +826,7 @@ const friend = friendSnapshot.data() as Friend
 </Layout>
 ```
 
-#### Display records with an edit button
+#### Display a list of records with an edit button
 
 Finally, `src/pages/dashboard.astro` will display a list of friends. Each friend will have a link to their details page and an edit button that will redirect the user to the edit page.
 
