add pages file tree

--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -871,6 +871,34 @@ const friends = friendsSnapshot.docs.map((doc) => ({
 </Layout>
 ```
 
+After creating all the pages, you should have the following file structure:
+
+<FileTree title="Project Structure">
+- src
+  - env.d.ts
+  - firebase
+    - client.ts
+    - server.ts
+  - pages
+    - dashboard.astro
+    - add.astro
+    - edit
+      - [id].astro
+    - friend
+      - [id].astro
+    - api
+      - friends
+        - index.ts
+        - [id].ts
+- .env
+- astro.config.mjs
+- package.json
+</FileTree>
+
+
+
+##
+
 ## Community Resources
 
 - [Astro and Firebase SSR app example](https://github.com/kevinzunigacuellar/astro-firebase)
