update with client directives skeleton content

--- a/src/content/docs/en/islands/0-introduction.mdx
+++ b/src/content/docs/en/islands/0-introduction.mdx
@@ -83,7 +83,7 @@ This tutorial is a project of our Docs team. You can find us on Discord in the `
 </Checklist>
 </Box>
 
-## UNIT ONE OR ZERO IF CHRIS LETS ME
+## UNIT ZERO
 
 <PreCheck>
   - Install an Astro integration
@@ -133,3 +133,55 @@ ANY EXTRA CONTENT
 - [Astro integrations](/en/guides/integrations-guide/)
 
 - [Using UI Framework components in Astro](/en/core-concepts/framework-components/)
+
+## UNIT ONE
+
+<PreCheck>
+  - Use `client:` directives to hydrate a framework component
+  - something "real life" related e.g. make your button work
+
+</PreCheck>
+
+CONTENT - Add various client directives to components
+
+<Box icon="puzzle-piece">
+## Try it yourself - Hydrate a component (placeholder content)
+
+Hydrate a component with a client directive, following the [same steps as above]().
+
+
+<details>
+<summary>Show me the steps.</summary>
+1. Create a new file at `src/pages/blog.astro`.
+2. Copy the entire contents of `index.astro` and paste them into `blog.astro`.
+3. [Add a third navigation link](#add-navigation-links) to the top of every page:
+
+```astro title="src/pages/index.astro" ins={4}
+<body>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog/">Blog</a>
+
+  <h1>My Astro Site</h1>
+</body>
+```
+</details>
+</Box>
+
+ANY EXTRA CONTENT
+
+<Box icon="check-list">
+## Checklist
+
+<Checklist>
+- [ ] I can add a client directive to control the hydration of each individual framework component.
+- [ ] I can add a script to a `.astro` file for interactivity, because it cannot use client directives.
+</Checklist>
+</Box>
+
+### Resources
+
+- [Client directives reference](/en/reference/directives-reference/#client-directives)
+
+- [Client-side scripts and event handling in Astro](/en/guides/client-side-scripts/)
+
