pre and post up to and including unit 3

--- a/src/content/docs/en/islands/0-introduction.mdx
+++ b/src/content/docs/en/islands/0-introduction.mdx
@@ -83,7 +83,7 @@ This tutorial is a project of our Docs team. You can find us on Discord in the `
 </Checklist>
 </Box>
 
-## UNIT ZERO
+## UNIT ZERO - UI Framework components in Astro
 
 <PreCheck>
   - Install an Astro integration
@@ -134,7 +134,7 @@ ANY EXTRA CONTENT
 
 - [Using UI Framework components in Astro](/en/core-concepts/framework-components/)
 
-## UNIT ONE
+## UNIT ONE - client directives for hydration
 
 <PreCheck>
   - Use `client:` directives to hydrate a framework component
@@ -185,3 +185,260 @@ ANY EXTRA CONTENT
 
 - [Client-side scripts and event handling in Astro](/en/guides/client-side-scripts/)
 
+## UNIT TWO Communicate from Astro -> framework components
+
+<PreCheck>
+  - Send props to islands
+  - send children/nest islands using slots
+  - Use Astro.global stuff only in `.astro`
+
+</PreCheck>
+
+CONTENT - unit topic
+
+<Box icon="puzzle-piece">
+## Try it yourself - Passing Props and/or nesting slots (placeholder content)
+
+Pass props/nest slots, following the [same steps as above]().
+
+
+<details>
+<summary>Show me the steps.</summary>
+1. Create a new file at `src/pages/blog.astro`.
+2. Copy the entire contents of `index.astro` and paste them into `blog.astro`.
+3. [Add a third navigation link](#add-navigation-links) to the top of every page:
+
+```astro title="src/pages/index.astro" ins={4}
+<body>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog/">Blog</a>
+
+  <h1>My Astro Site</h1>
+</body>
+```
+</details>
+</Box>
+
+ANY EXTRA CONTENT
+
+<Box icon="check-list">
+## Checklist
+
+<Checklist>
+- [ ] I can pass serializable props from Astro to an island .
+- [ ] I use slots to nest islands within a `.astro` file.
+- [ ] I can access Astro global stuff in my `.astro` component.
+</Checklist>
+</Box>
+
+### Resources
+
+- [Passing props to UI framework components](/en/core-concepts/framework-components/#passing-props-to-framework-components)
+- [Passing children to UI framework components](/en/core-concepts/framework-components/#passing-children-to-framework-components)
+- [Nesting framework UI components](/en/core-concepts/framework-components/#nesting-framework-components)
+
+## UNIT THREE - server-side vs client-side rendering/ dynamic updating
+
+<PreCheck>
+  - Run some code that renders only on the client-side
+  - something "real life" example
+
+</PreCheck>
+
+CONTENT - unit topic
+
+<Box icon="puzzle-piece">
+## Try it yourself - unit task (placeholder content)
+
+unit task, following the [same steps as above]().
+
+
+<details>
+<summary>Show me the steps.</summary>
+1. Create a new file at `src/pages/blog.astro`.
+2. Copy the entire contents of `index.astro` and paste them into `blog.astro`.
+3. [Add a third navigation link](#add-navigation-links) to the top of every page:
+
+```astro title="src/pages/index.astro" ins={4}
+<body>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog/">Blog</a>
+
+  <h1>My Astro Site</h1>
+</body>
+```
+</details>
+</Box>
+
+ANY EXTRA CONTENT
+
+<Box icon="check-list">
+## Checklist
+
+<Checklist>
+- [ ] I can identify when an island's code renders on the server vs in the client
+- [ ] I can add client-side interactivity when necessary
+</Checklist>
+</Box>
+
+### Resources
+
+- [Client:only Island rendering](/en/reference/directives-reference/#clientonly)
+
+- [Astro server-side frontmatter script](/en/core-concepts/astro-components/#the-component-script)
+
+- [Astro is server-first](/en/concepts/why-astro/#server-first)
+
+## UNIT FOUR - Data fetching
+
+<PreCheck>
+  - Something technical
+  - something "real life" 
+
+</PreCheck>
+
+CONTENT - unit topic
+
+<Box icon="puzzle-piece">
+## Try it yourself - unit task (placeholder content)
+
+unit task, following the [same steps as above]().
+
+
+<details>
+<summary>Show me the steps.</summary>
+1. Create a new file at `src/pages/blog.astro`.
+2. Copy the entire contents of `index.astro` and paste them into `blog.astro`.
+3. [Add a third navigation link](#add-navigation-links) to the top of every page:
+
+```astro title="src/pages/index.astro" ins={4}
+<body>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog/">Blog</a>
+
+  <h1>My Astro Site</h1>
+</body>
+```
+</details>
+</Box>
+
+ANY EXTRA CONTENT
+
+<Box icon="check-list">
+## Checklist
+
+<Checklist>
+- [ ] I can do a technical thing.
+- [ ] I can do a real life example thing.
+</Checklist>
+</Box>
+
+### Resources
+
+- [Topic 1](/en/reference/directives-reference/#client-directives)
+
+- [Topic 2](/en/guides/client-side-scripts/)
+
+## UNIT FIVE - Styling Islands
+
+<PreCheck>
+  - Something technical
+  - something "real life" 
+
+</PreCheck>
+
+CONTENT - unit topic
+
+<Box icon="puzzle-piece">
+## Try it yourself - unit task (placeholder content)
+
+unit task, following the [same steps as above]().
+
+
+<details>
+<summary>Show me the steps.</summary>
+1. Create a new file at `src/pages/blog.astro`.
+2. Copy the entire contents of `index.astro` and paste them into `blog.astro`.
+3. [Add a third navigation link](#add-navigation-links) to the top of every page:
+
+```astro title="src/pages/index.astro" ins={4}
+<body>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog/">Blog</a>
+
+  <h1>My Astro Site</h1>
+</body>
+```
+</details>
+</Box>
+
+ANY EXTRA CONTENT
+
+<Box icon="check-list">
+## Checklist
+
+<Checklist>
+- [ ] I can do a technical thing.
+- [ ] I can do a real life example thing.
+</Checklist>
+</Box>
+
+### Resources
+
+- [Topic 1](/en/reference/directives-reference/#client-directives)
+
+- [Topic 2](/en/guides/client-side-scripts/)
+
+## UNIT SIX - Advanced patterns 
+<PreCheck>
+  - Something technical
+  - something "real life" 
+
+</PreCheck>
+
+CONTENT - unit topic
+
+<Box icon="puzzle-piece">
+## Try it yourself - unit task (placeholder content)
+
+unit task, following the [same steps as above]().
+
+
+<details>
+<summary>Show me the steps.</summary>
+1. Create a new file at `src/pages/blog.astro`.
+2. Copy the entire contents of `index.astro` and paste them into `blog.astro`.
+3. [Add a third navigation link](#add-navigation-links) to the top of every page:
+
+```astro title="src/pages/index.astro" ins={4}
+<body>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog/">Blog</a>
+
+  <h1>My Astro Site</h1>
+</body>
+```
+</details>
+</Box>
+
+ANY EXTRA CONTENT
+
+<Box icon="check-list">
+## Checklist
+
+<Checklist>
+- [ ] I can do a technical thing.
+- [ ] I can do a real life example thing.
+</Checklist>
+</Box>
+
+### Resources
+
+- [Topic 1](/en/reference/directives-reference/#client-directives)
+
+- [Topic 2](/en/guides/client-side-scripts/)
