--- a/src/content/docs/fr/guides/backend.mdx
+++ b/src/content/docs/fr/guides/backend.mdx
@@ -1,4 +1,15 @@
 ---
 title: Utiliser un service Backend avec Astro
 description: Comment utiliser un service Backend pour ajouter une authentification, du stockage et des données
+i18nReady: true
 ---
+
+import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
+
+**Prêt à ajouter des fonctionnalités telles que l'authentification, le stockage ou les données à votre projet Astro ?** Suivez l'un de nos guides pour intégrer un service Backend.
+
+## Guides des services Backend
+
+<BackendGuidesNav />
+
+Notez que beaucoup de ces pages sont des **stubs** : ce sont des collections de ressources qui attendent votre contribution !
