--- a/src/content/docs/en/islands/0-introduction.mdx
+++ b/src/content/docs/en/islands/0-introduction.mdx
@@ -294,17 +294,17 @@ ANY EXTRA CONTENT
 ## UNIT FOUR - Data fetching
 
 <PreCheck>
-  - Something technical
-  - something "real life" 
+  - Fetch data on the server
+  - Fetch data on the client
 
 </PreCheck>
 
 CONTENT - unit topic
 
 <Box icon="puzzle-piece">
-## Try it yourself - unit task (placeholder content)
+## Try it yourself - fetching some kind of data (placeholder content)
 
-unit task, following the [same steps as above]().
+Fetching some data, somehow, following the [same steps as above]().
 
 
 <details>
@@ -331,14 +331,14 @@ ANY EXTRA CONTENT
 ## Checklist
 
 <Checklist>
-- [ ] I can do a technical thing.
-- [ ] I can do a real life example thing.
+- [ ] I can fetch data on the server
+- [ ] I can fetch data on the client, in response to user interaction or updating conditions
 </Checklist>
 </Box>
 
 ### Resources
 
-- [Topic 1](/en/reference/directives-reference/#client-directives)
+- [Data fetching](/en/guides/data-fetching/)
 
 - [Topic 2](/en/guides/client-side-scripts/)
 
