--- a/src/content/docs/pt-br/guides/backend.mdx
+++ b/src/content/docs/pt-br/guides/backend.mdx
@@ -1,6 +1,6 @@
 ---
-title: Use um serviço de back-end com o Astro
-description: Como usar um serviço de back-end para adicionar autenticação, armazenamento e dados
+title: Use um serviço de backend com o Astro
+description: Como usar um serviço de backend para adicionar autenticação, armazenamento e dados
 i18nReady: true
 ---
 import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
