--- a/src/content/docs/pt-br/guides/backend.mdx
+++ b/src/content/docs/pt-br/guides/backend.mdx
@@ -5,7 +5,7 @@ i18nReady: true
 ---
 import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
 
-**Pronto para adicionar recursos como autenticação, armazenamento ou dados ao seu projeto em Astro?** Siga um de nossos guias para integrar um serviço de back-end.
+**Pronto para adicionar recursos como autenticação, armazenamento ou dados ao seu projeto em Astro?** Siga um de nossos guias para integrar um serviço de backend.
 
 ## Guia de serviços de back-end 
 
