--- a/src/content/docs/pt-br/guides/backend.mdx
+++ b/src/content/docs/pt-br/guides/backend.mdx
@@ -7,7 +7,7 @@ import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
 
 **Pronto para adicionar recursos como autenticação, armazenamento ou dados ao seu projeto em Astro?** Siga um de nossos guias para integrar um serviço de backend.
 
-## Guia de serviços de back-end 
+## Guia de serviços de backend
 
 <BackendGuidesNav />
 
