--- a/src/content/docs/pt-br/guides/backend.mdx
+++ b/src/content/docs/pt-br/guides/backend.mdx
@@ -10,8 +10,7 @@ import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
 ## Guia de serviços de backend
 
 <BackendGuidesNav />
-
-Note que várias dessas páginas são **esboços**: coleções de recursos esperando para a sua contribuição.
+Note que várias dessas páginas são **esboços**: coleções de recursos esperando por sua contribuição.
 
 ## O que é um serviço de back-end?
 
