--- a/src/content/docs/pt-br/guides/backend.mdx
+++ b/src/content/docs/pt-br/guides/backend.mdx
@@ -12,7 +12,7 @@ import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
 <BackendGuidesNav />
 Note que várias dessas páginas são **esboços**: coleções de recursos esperando por sua contribuição.
 
-## O que é um serviço de back-end?
+## O que é um serviço de backend?
 
 Um serviço de back-end é um sistema baseado em nuvem que ajuda você a criar e gerenciar sua infraestrutura de back-end. Ele fornece um conjunto de ferramentas e serviços para gerenciamento de bancos de dados, autenticação de usuário e outras funcionalidades do lado do servidor. Isso permite que você se concentre na construção de seus aplicativos sem ter que se preocupar com o gerenciamento da infraestrutura subjacente.
 
