--- a/src/content/docs/pt-br/guides/backend.mdx
+++ b/src/content/docs/pt-br/guides/backend.mdx
@@ -14,7 +14,7 @@ Note que várias dessas páginas são **esboços**: coleções de recursos esper
 
 ## O que é um serviço de backend?
 
-Um serviço de back-end é um sistema baseado em nuvem que ajuda você a criar e gerenciar sua infraestrutura de back-end. Ele fornece um conjunto de ferramentas e serviços para gerenciamento de bancos de dados, autenticação de usuário e outras funcionalidades do lado do servidor. Isso permite que você se concentre na construção de seus aplicativos sem ter que se preocupar com o gerenciamento da infraestrutura subjacente.
+Um serviço de backend é um sistema baseado em nuvem que ajuda você a criar e gerenciar sua infraestrutura de backend. Ele fornece um conjunto de ferramentas e serviços para gerenciamento de bancos de dados, autenticação de usuário e outras funcionalidades do lado do servidor. Isso permite que você se concentre na construção de suas aplicações sem ter que se preocupar com o gerenciamento da infraestrutura interna.
 
 ## Por que eu usaria um serviço de back-end?
 
