--- a/src/content/docs/pt-br/guides/backend.mdx
+++ b/src/content/docs/pt-br/guides/backend.mdx
@@ -16,7 +16,7 @@ Note que várias dessas páginas são **esboços**: coleções de recursos esper
 
 Um serviço de backend é um sistema baseado em nuvem que ajuda você a criar e gerenciar sua infraestrutura de backend. Ele fornece um conjunto de ferramentas e serviços para gerenciamento de bancos de dados, autenticação de usuário e outras funcionalidades do lado do servidor. Isso permite que você se concentre na construção de suas aplicações sem ter que se preocupar com o gerenciamento da infraestrutura interna.
 
-## Por que eu usaria um serviço de back-end?
+## Por que eu usaria um serviço de backend?
 
 Você pode querer considerar um serviço de back-end se seu projeto tiver necessidades complexas do lado do servidor, por exemplo:
 - registro e autenticação de usuário
