--- a/src/content/docs/pt-br/guides/backend.mdx
+++ b/src/content/docs/pt-br/guides/backend.mdx
@@ -18,7 +18,7 @@ Um serviço de backend é um sistema baseado em nuvem que ajuda você a criar e 
 
 ## Por que eu usaria um serviço de backend?
 
-Você pode querer considerar um serviço de back-end se seu projeto tiver necessidades complexas do lado do servidor, por exemplo:
+Você pode querer considerar um serviço de backend se seu projeto tiver necessidades complexas do lado do servidor, como por exemplo:
 - registro e autenticação de usuário
 - armazenamento de dados persistente
 - armazenamento de assets carregados pelo usuário
