--- a/src/content/docs/es/core-concepts/routing.mdx
+++ b/src/content/docs/es/core-concepts/routing.mdx
@@ -86,7 +86,7 @@ Los parámetros pueden incluirse en distintas partes del path. Por ejemplo, el a
 
 📚 Lee más sobre [`getStaticPaths()`](/es/reference/api-reference/#getstaticpaths).
 
-<RecipeLinks slugs={["en/recipes/i18n"]} />
+<RecipeLinks slugs={["es/recipes/i18n"]} />
 
 ### Parámetros Rest
 
