add unit 5 skeleton

--- a/src/content/docs/en/islands/0-introduction.mdx
+++ b/src/content/docs/en/islands/0-introduction.mdx
@@ -340,22 +340,20 @@ ANY EXTRA CONTENT
 
 - [Data fetching](/en/guides/data-fetching/)
 
-- [Topic 2](/en/guides/client-side-scripts/)
-
 ## UNIT FIVE - Styling Islands
 
 <PreCheck>
-  - Something technical
-  - something "real life" 
+  - Style a framework component
+  - Pass styles to an island from Astro
 
 </PreCheck>
 
 CONTENT - unit topic
 
 <Box icon="puzzle-piece">
-## Try it yourself - unit task (placeholder content)
+## Try it yourself - Style an island (placeholder content)
 
-unit task, following the [same steps as above]().
+Add styles to an island, following the [same steps as above]().
 
 
 <details>
@@ -382,16 +380,17 @@ ANY EXTRA CONTENT
 ## Checklist
 
 <Checklist>
-- [ ] I can do a technical thing.
-- [ ] I can do a real life example thing.
+- [ ] I can style an island using its own framework's styling options
+- [ ] I can style an island from an Astro parent
+
 </Checklist>
 </Box>
 
 ### Resources
 
-- [Topic 1](/en/reference/directives-reference/#client-directives)
+- [Styling and CSS in Astro](/en/guides/styling/)
 
-- [Topic 2](/en/guides/client-side-scripts/)
+- [Tracking support for CSS-in-JS](https://github.com/withastro/astro/issues/4432)
 
 ## UNIT SIX - Advanced patterns 
 <PreCheck>
