--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -186,7 +186,7 @@ Create three endpoints related to authentication in a new directory `src/pages/a
 
 ```ts title="src/pages/api/auth/signin.ts"
 import type { APIRoute } from "astro";
-import { app } from "../../../lib/firebase/server";
+import { app } from "../../../firebase/server";
 import { getAuth } from "firebase-admin/auth";
 
 export const get: APIRoute = async ({ request, cookies, redirect }) => {
